@@ -19,6 +19,7 @@ export(getEntropy)
 export(getIntegerRandomWalk)
 export(getLoudness)
 export(getLoudnessFolder)
+export(getPrior)
 export(getRMS)
 export(getRMSFolder)
 export(getRandomWalk)
