@@ -10,18 +10,19 @@ analyze(x, samplingRate = NULL, dynamicRange = 80, silence = 0.04,
   cutFreq = min(samplingRate/2, max(7000, pitchCeiling * 2)),
   nFormants = 3, pitchMethods = c("autocor", "spec", "dom"),
   entropyThres = 0.6, pitchFloor = 75, pitchCeiling = 3500,
-  priorMean = 300, priorSD = 6, priorPlot = FALSE, nCands = 1,
-  minVoicedCands = NULL, domThres = 0.1, domSmooth = 220,
-  autocorThres = 0.7, autocorSmooth = NULL, cepThres = 0.3,
-  cepSmooth = 400, cepZp = 0, specThres = 0.3, specPeak = 0.35,
-  specSinglePeakCert = 0.4, specHNRslope = 0.8, specSmooth = 150,
-  specMerge = 1, shortestSyl = 20, shortestPause = 60,
-  interpolWin = 75, interpolTol = 0.3, interpolCert = 0.3,
-  pathfinding = c("none", "fast", "slow")[2], annealPars = list(maxit =
-  5000, temp = 1000), certWeight = 0.5, snakeStep = 0.05,
-  snakePlot = FALSE, smooth = 1, smoothVars = c("pitch", "dom"),
-  summary = FALSE, summaryFun = c("mean", "median", "sd"),
-  plot = TRUE, showLegend = TRUE, savePath = NA, plotSpec = TRUE,
+  priorMean = 300, priorSD = 6, priorPlot = "deprecated",
+  nCands = 1, minVoicedCands = NULL, domThres = 0.1,
+  domSmooth = 220, autocorThres = 0.7, autocorSmooth = NULL,
+  cepThres = 0.3, cepSmooth = 400, cepZp = 0, specThres = 0.3,
+  specPeak = 0.35, specSinglePeakCert = 0.4, specHNRslope = 0.8,
+  specSmooth = 150, specMerge = 1, shortestSyl = 20,
+  shortestPause = 60, interpolWin = 75, interpolTol = 0.3,
+  interpolCert = 0.3, pathfinding = c("none", "fast", "slow")[2],
+  annealPars = list(maxit = 5000, temp = 1000), certWeight = 0.5,
+  snakeStep = 0.05, snakePlot = FALSE, smooth = 1,
+  smoothVars = c("pitch", "dom"), summary = FALSE,
+  summaryFun = c("mean", "median", "sd"), plot = TRUE,
+  showLegend = TRUE, savePath = NA, plotSpec = TRUE,
   pitchPlot = list(col = rgb(0, 0, 1, 0.75), lwd = 3),
   candPlot = list(), ylim = NULL, xlab = "Time, ms", ylab = "kHz",
   main = NULL, width = 900, height = 500, units = "px", res = NA,
@@ -88,7 +89,8 @@ most likely pitch values for this file. For ex., \code{priorMean = 300,
 priorSD = 6} gives a prior with mean = 300 Hz and SD = 6 semitones (half
 an octave)}
 
-\item{priorPlot}{if TRUE, produces a separate plot of the prior}
+\item{priorPlot}{deprecated; use \code{\link{getPrior}} to visualize the
+prior}
 
 \item{nCands}{maximum number of pitch candidates per method (except for
 \code{dom}, which returns at most one candidate per frame), normally 1...4}
